[tool.poetry]
name = "fmover"
version = "0.0.3"
description = "Move files based on file properties and given criteria"
license = "MIT"
authors = ["Ephraim Siegfried <ephraim.siegfried@hotmail.com>",]
repository="https://github.com/EphraimSiegfried/fmover"
keywords = ["filemanager","filemover","mover", "fileorganizer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Utilities",
]
packages = [
    { include = "fmover", from = "src" },
]

[tool.poetry.dependencies]
python= "^3.6"
appdirs = "^1.4.4"
notifypy = "^1.0.3.0"

[tool.poetry.scripts]
fmover = "fmover.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
